src/pages/DisplayCoin/components/MarketOverview/MarketOverview.module.scss
.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #001a2c;
    height: 100vh;
    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(6,29,33,0.8995973389355743) 100%);
}

.body {
    padding: 36px;
    border: 1px solid #133752;
    background-color: #001a2c;
    margin-bottom: 40px;
}

.colMiddle {
    width: 85%;
    float: right;
}

.statisticsOverview {
    max-width: 1150px;
    margin: 0 auto;
    color: white;
    padding-top: 20px;
    ul {
        display: flex;
        justify-content: space-around;
        align-items: center;
        li {
            list-style: none;
            span {
                color:aquamarine
            }
        }
    }
}

.row {
    border: 1px solid aquamarine;
    .headFilter {
        display: flex;
        justify-content: space-between;
        align-items: center;
        border-bottom: 1px solid aquamarine;
    }
}

.search {
    input {
        width: 200px;
        height: 30px;
        border-radius: 4px;
        border-color: aquamarine;
    }
}

input:focus-visible, select:focus {
    outline: none;
}

input::placeholder {
    font-weight: bold;
    opacity: .5;
    padding-left: 15px;
    color: #133752;
}

.filter {
    width: 200px;
    height: 30px;
    margin-right: 10px;
}

table {
    width: 100%;
    thead {
        text-transform: uppercase;
        font-size: 1.5rem;
        border: 1px solid aquamarine;
        th {
            padding: 5px;
            border-bottom: 1px solid aquamarine;
            border-right: 1px solid aquamarine;
        }
        
    }
   
}
td {
    text-align: center;
    padding: 20px 0;
    :nth-child(2) {
        color: antiquewhite;
    }
    border-right: 1px solid #fff;
    border-bottom: 1px solid #fff;
}
.iconFollow {
    cursor: pointer;
}

.listCoin {
    img {
        margin-right: 10px;
        margin-left: 10px;
    }
    .priceCoin {
        display: flex;
        justify-content: start;
        align-items: center;
       
    }

}

.talbeScroll {
    overflow-y: auto;
    height: 850px;
}

